--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -1,7 +1,7 @@
  header {
    position: relative;
   background: {
-     image: linear-gradient(to right, rgba(254, 140, 0, .5), rgba(248, 54, 0, .7)), url('../../img/deadpool.jpg');
+     image: linear-gradient(to right, rgba(254, 140, 0, .5), rgba(248, 54, 0, .7)), url('../img/deadpool.jpg');
      repeat: no-repeat;
      position: center;
      size: cover;
