--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,7 @@
 @import 'typography/typography';
 
 @import 'layout/header';
+@import 'layout/search';
 @import 'layout/posters';
 @import 'layout/cta';
 
