--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -1,5 +1,5 @@
  header {
-   position: relative;
+  position: relative;
   background: {
      image: linear-gradient(to right, rgba(254, 140, 0, .5), rgba(248, 54, 0, .7)), url('../img/deadpool.jpg');
      repeat: no-repeat;
@@ -7,6 +7,7 @@
      size: cover;
   }
   height: 100vh;
+  width: 100%;
   min-height: 56.25rem; 
   padding: 0 5%;
 
