--- a/src/main.css
+++ b/src/main.css
@@ -116,6 +116,7 @@ header {
   background-position: center;
   background-size: cover;
   height: 100vh;
+  width: 100%;
   min-height: 56.25rem;
   padding: 0 5%;
 }
@@ -311,6 +312,7 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
 }
 
 footer a {
